--- a/colors/base16-tomorrow.conf
+++ b/colors/base16-tomorrow.conf
@@ -1,30 +1,30 @@
 # COLOUR (base16)
 
 # default statusbar colors
-set-option -g status-style "fg=#969896,bg=#e0e0e0"
+set-option -g status-style "fg=default,bg=colour10"
 
 # default window title colors
-set-window-option -g window-status-style "fg=#969896,bg=default"
+set-window-option -g window-status-style "fg=colour1,bg=default"
 
 # active window title colors
-set-window-option -g window-status-current-style "fg=#eab700,bg=default"
+set-window-option -g window-status-current-style "fg=colour2,bg=default"
 
 # pane border
-set-option -g pane-border-style "fg=#e0e0e0"
-set-option -g pane-active-border-style "fg=#d6d6d6"
+set-option -g pane-border-style "fg=colour10"
+set-option -g pane-active-border-style "fg=colour11"
 
 # message text
-set-option -g message-style "fg=#4d4d4c,bg=#e0e0e0"
+set-option -g message-style "fg=colour8,bg=colour11"
 
 # pane number display
-set-option -g display-panes-active-colour "#718c00"
-set-option -g display-panes-colour "#eab700"
+set-option -g display-panes-active-colour "colour4"
+set-option -g display-panes-colour "colour2"
 
 # clock
-set-window-option -g clock-mode-colour "#718c00"
+set-window-option -g clock-mode-colour "colour6"
 
 # copy mode highligh
-set-window-option -g mode-style "fg=#969896,bg=#d6d6d6"
+set-window-option -g mode-style "fg=colour4,bg=colour11"
 
 # bell
-set-window-option -g window-status-bell-style "fg=#e0e0e0,bg=#c82829"
+set-window-option -g window-status-bell-style "fg=colour5,bg=colour10"
